assets/css/styles.css
img {
	border-radius: 3px 3px 0 0;
	width: 100%;
}

.imageContainer {
	text-align: center;
	padding: 2px 16px;
}

.image {
    display: block;
    margin-left: auto;
    margin-right: auto; 
}

.caption {
	display: inline-block;
	line-height: normal;
}

.card {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	transition: 0.3s;
	width: 40%;
	border-radius: 5px;
	background-color: #ffffff;
	line-height: 40px;

	display: block;
	margin-left: auto;
	margin-right: auto;
}

.card:hover {
	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.planCard {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	transition: 0.3s;
	border-radius: 5px;
	background-color: #ffffff;

	display: block;
	margin-right: auto;
}

.planCard:hover {
	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.planCard-title {
	font-weight: bold;
	padding-left: 16px;
	padding-top: 14px;
	font-size: larger;
}

.planCard-body {
	padding-left: 16px;
	padding-bottom: 10px;
    line-height: normal;
}

.btn-info {
	float: right;
	margin-top: -44px;
	margin-right: 18px;
}

.searchDiv {
	position: fixed;
	right: 100px;
	bottom: 100px;
	}
hr {
	margin-top: 0;
}

h4 {
	font-weight: bold;
}

table {
	margin-top: 3%;
}

th {
	font-weight: bold;
	color: #262626;
}

.container, .navbar {
	background-color: #f0f2ef;
}

.navbar, .navbar-default {
	border: none;
	margin-top: 3%;
	list-style: none;
	overflow: hidden;
	animation-duration: 1.5s;
}

.navbar-default .navbar-nav>li>a {
	color: #262626;
	padding-top: 5px;
	padding-bottom: 5px;
}

ul.rightNav {
	float: right;
	letter-spacing: 1px;
}

ul.rightNav li {
	float: left;
	padding: 0;
}

ul.rightNav li a {
	display: inline-block;
	text-align: center;
	text-decoration: none;
}

ul.leftNav {
	float: left;
	letter-spacing: 1px;
	padding-top: 5px;
}

ul.leftNav li {
	float: left;
	padding-right: 2px;
}

.button {
	padding-top: 5px;
	padding-bottom: 5px;
	color: #262626;
	border: 1px solid transparent;
	transition-duration: 0.2s;
	animation-duration: 1s;
	animation-delay: 0.3s;
	transition: 0.5s ease-in-out;
}

.button::after {
	content: '';
	position: absolute;
	bottom: 0;
	left: 0;
	width: 0%;
	border-bottom: 2px solid transparent;
	transition: 0.4s;
}

.button:hover::after {
	width: 100%;
	border-bottom: 2px solid #4B4E6D;
}

@media screen and (max-width: 680px) {
	.navbar {
			margin-top: 10%;
	}

	div {
		padding-left: 10px;
		padding-right: 10px;
	}
}

#map {
    margin-left: auto;
    margin-right: auto;
    width: auto;
    height: 450px;
}

.input-group {
    width: 35%;
}

#part-2 {
    display: none;
}

#part-3 {
    display: none;
}

#previous-button {
    float: left;
    background-color: #f0f2ef;
    color: black;
	margin-top: -44px;
    margin-right: 18px;
    border: none;
}

#price {
    float: right;
    margin-right: 18px;
}

#maintainContainer, #lblIncorrect {
    display: none;
}

#loggedIN, #btnLoggedOut, #btnAdmin{
    display: none;
}

